# Hand-Gesture-Stuff

C++_Graphics/NeuralNetworkFlappy/: CMakeLists.txt  Makefile
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/: CMakeLists.txt
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/include/ML/: neural_network.h
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/include/backup_main/: main.cpp
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/include/common/: EventHandler.h  colors.h  double_buffer.h  number_generator.h  player.h
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/include/genetics/: DNA.h  selector.h  unit.h
C++_Graphics/NeuralNetworkFlappy/AI_Flappy/include/graphics/: game.h  graphics.h  neural_renderer.h
C++_Graphics/NeuralNetworkFlappy/Main/: CMakeLists.txt  main.cpp
ChatApp.python/: LOGO.icns  client.py  create_account.py  login.py  main.py  server.py
ChatApp.python/user_accounts/: NEWWER_USERNAME  USERNAME  my_username  new_user
Hand-Gestures-Recognition.orig/: main.cc
Hand-Gestures-Recognition.orig/include/: Camera.h  Video.h
Hand-Gestures-Recognition.orig/src/: BackgroundParser.cc  Camera.cc  FaceDetector.cc  FingerPoints.cc  SkinDetection.cc  Video.cc
